# a3_skeleton

./: CMakeLists.txt  Doxyfile  mainpage.dox
src/: bar.cpp  bar.h  foo.cpp  foo.h  laserprocessing.h  main_bar.cpp  main_both.cpp  main_foo.cpp
test/: utest.cpp
